--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="adorno"></div>
             <img src="/img/Fondo.png" alt="">
             <div class="bienvenida_container">
-                <h1>Bienvenido a <span>Puerto Seguro:</span></h1>
+                <h1>Bienvenidos al Pensión Familiar <span>"Puerto Seguro":</span></h1>
                 <p>ofrecemos un buen servicio, almuerzos y platos deliciosos. Disfruta de nuestros platos hechos con ingredientes frescos y mucho cariño en nuestro pensión familiar PUERTO SEGURO.</p>
                 <a href="#menu"><h2>VER MENÚ</h2></a>
             </div>
