Edit index Styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section  class="bienvenida">
             <div class="adorno"></div>
-            <img src="/img/Fondo.png" alt="">
+            <img src="/img/FondoHEADER.jpg" alt="">
             <div class="bienvenida_container">
                 <h1>Bienvenidos al Pensión Familiar <span>"Puerto Seguro":</span></h1>
                 <p>ofrecemos un buen servicio, almuerzos y platos deliciosos. Disfruta de nuestros platos hechos con ingredientes frescos y mucho cariño en nuestro pensión familiar PUERTO SEGURO.</p>
@@ -32,11 +32,6 @@
         </section>
 
         <section class="nosotros">
-            <img class="border left" src="./img/BORDE.png" alt="">
-            <img class="border right" src="./img/BORDE.png" alt="">
-            <img class="border top" src="./img/BORDE.png" alt="">
-            <img class="border bottom" src="./img/BORDE.png" alt="">
-            
             <div class="adorno adorno_top"></div>
             <div class="adorno adorno_bottom"></div>
 
