Botones Menu estilo y funcion

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             <div class="adorno_bottom"></div>
             <h1>MENU</h1>
 
-            <ul class="barra_menu">
+            <ul class="barra_menu" id="buton_bar">
 
-                <button onclick="showJugosTes()" id="btn">Jugos y Tés</button>
+                <button onclick="showJugosTes()" id="btn" class="btnColor " >Jugos y Tés</button>
                 
-                <button onclick="showPlatos()" id="btn">Platos a la carta</button>
+                <button onclick="showPlatos()" id="btn" class="btnColor activebtn">Platos a la carta</button>
 
-                <button onclick="showEspecial()" id="btn">Viernes Especiales</button>
+                <button onclick="showEspecial()" id="btn" class="btnColor ">Viernes Especiales</button>
 
-                <button onclick="showSandwichOmellete()" id="btn">Sandwich y Omellete</button>
-
+                <button onclick="showSandwichOmellete()" id="btn" class="btnColor ">Sandwich y Omellete</button>
+                
             </ul>
 
             <ul class="cajamenu">
