--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </p>
                 <div class="btn_bienvenida">
                     <a href="#menu"><h2>VER MENÚ</h2></a>
-                    <a href="#menu" class="bien_Whats"><h2><ion-icon name="logo-whatsapp"></ion-icon> MENÚ DEL DÍA </h2></a>
+                    <a href="https://chat.whatsapp.com/EVm8rjwSsgd1Jyv1jmXNLP" class="bien_Whats" target="_blank"><h2><ion-icon name="logo-whatsapp"></ion-icon> MENÚ DEL DÍA </h2></a>
                 </div>
                 
             </div>
@@ -37,6 +37,7 @@
         </section>
 
         <section class="nosotros">
+            <img src="./img/LOGOPUERTO.png" alt="" class="logo_puerto">
             <div class="adorno adorno_top"></div>
             <div class="adorno adorno_bottom"></div>
 
