Responsive y cambios menu

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <div class="adorno"></div>
             <img src="/img/FondoHEADER.jpg" alt="">
             <div class="bienvenida_container">
-                <h1>Bienvenidos al Pensión Familiar <span>"Puerto Seguro":</span></h1>
+                <div class="bien_header">
+                    <img src="./img/LOGOPUERTO.png" alt="" class="logo_puerto">
+                    <h1>Bienvenidos al Pensión Familiar <span>"Puerto Seguro":</span></h1>
+                </div>
                 <p>ofrecemos un buen servicio, almuerzos y platos deliciosos. Disfruta de nuestros platos hechos con ingredientes frescos y mucho cariño en nuestro pensión familiar PUERTO SEGURO. <br/>
                 <span class="bien_unete">Únete a nuestro grupo de WhatsApp para ver el Menú del Día y DISFRUTA DE NUESTROS ALMUERZOS POR SOLO 15 Bs.</span>
                 </p>
@@ -37,7 +40,7 @@
         </section>
 
         <section class="nosotros">
-            <img src="./img/LOGOPUERTO.png" alt="" class="logo_puerto">
+            
             <div class="adorno adorno_top"></div>
             <div class="adorno adorno_bottom"></div>
 
